test successful. reverting back to original

--- a/content/Recordings.html
+++ b/content/Recordings.html
@@ -22,7 +22,7 @@ Chicago, IL<br>
 60615<br>
 </address>
 
-I'll probably stop taking submissions around May 2020-ish. TEST <br>
+I'll probably stop taking submissions around May 2020-ish.<br>
 
  <pre>   
       _________
