--- a/content/Recordings.html
+++ b/content/Recordings.html
@@ -6,7 +6,7 @@
 
 <h1>LOOK:</h1>
 
-<a href = "https://drive.google.com/drive/u/4/folders/1bRGkIQp2K34DWiDDGeh0GP44VPIW8nh2
+<a target="_blank" href = "https://drive.google.com/drive/u/4/folders/1bRGkIQp2K34DWiDDGeh0GP44VPIW8nh2
 ">https://drive.google.com/drive/u/4/folders/1bRGkIQp2K34DWiDDGeh0GP44VPIW8nh2
 </a>
 
