--- a/content/Recordings.html
+++ b/content/Recordings.html
@@ -2,7 +2,7 @@
 <head></head>
 <body>
 <h1>LISTEN:</h1>
-<a href = "https://soundcloud.com/hglewis">https://soundcloud.com/hglewis</a>
+<a target="_blank" href = "https://soundcloud.com/hglewis">https://soundcloud.com/hglewis</a>
 
 <h1>LOOK:</h1>
 
