fixed spelling error
spelling error in places

--- a/content/Recordings.html
+++ b/content/Recordings.html
@@ -11,7 +11,7 @@
 </a>
 
 <p>
-We are currently producing an album of postcard sized peices based on friend-submitted postcards from paces which don't exist. If you're interested, mail postcards to 
+We are currently producing an album of postcard sized peices based on friend-submitted postcards from places which don't exist. If you're interested, mail postcards to 
 </p>
 
 <address>
