--- a/public/content/Concerts.html
+++ b/public/content/Concerts.html
@@ -1,11 +1,19 @@
 <h1>Upcoming concerts:</h1>
-<h2>5/1/2020, 7pm Logan Center for the Arts.</h2>
-<p>We will be providing live accompanyment to a screening of early 20th century silent films from France.</p>
+
+
+<h2>7/29/20 8:30pm ChiCityLives with Mike Rice. Listen to live stream at  <a href="https://que4.org/"> Que4.org</a>   </h2>
+
 
 <h1>Past concerts:</h1>
-<h2>"Bongo Congo" Bond Chapel, Aug 23, 2019 11pm.</h2>
 
-<h2>Dream Variations. Smart Museum of Art, February 28, 2019 10PM.</h2>
+<h2><del>5/1/2020, 7pm Logan Center for the Arts.</h2>
+<p>We will be providing live accompanyment to a screening of early 20th century silent films from France.</del>
+<h3> Canceled, Covid-19<h3/></p>
+
+
+<h2>8/23/19, 11pm, Bond Chapel, "Bongo Congo."</h2>
+
+<h2>2/28/19, 10pm, Smart Museum of Art, "Dream Variations."</h2>
 
 <p>
 Commissioned by the Smart Museum for the opening of their exhibition Solidary & Solitary, which explored abstraction as a political focus. While the exhibition focused on black artists from the 1940s to the present, we found two poems by Langston Hughes: "The Cross,"  and "Dream Variations" analysis of dreams, death, and intersectionality to capture the spirit of the exhibition.
