--- a/content/Concerts.html
+++ b/content/Concerts.html
@@ -6,8 +6,8 @@
 
 <h1>Past concerts:</h1>
 
-<h2><del>5/1/2020, 7pm Logan Center for the Arts.</h2> Canceled, covid-19
-<p>We will be providing live accompanyment to a screening of early 20th century silent films from France.</del></p>
+<h2><del>5/1/2020, 7pm Logan Center for the Arts.</del></h2> 
+<p>We will be providing live accompanyment to a screening of early 20th century silent films from France. Canceled, covid-19</p>
 
 
 <h2>8/23/19, 11pm, Bond Chapel, "Bongo Congo."</h2>
