--- a/content/Concerts.html
+++ b/content/Concerts.html
@@ -1,7 +1,8 @@
 <h1>Upcoming concerts:</h1>
 
 
-<h2>7/29/20 8:30pm ChiCityLives with Mike Rice. Listen to live stream at  <a href="https://que4.org/"> Que4.org</a>   </h2>
+<h2>7/29/20 8:30pm ChiCityLives with Mike Rice.</h2> 
+<p>Listen to live stream at  <a href="https://que4.org/"> Que4.org</a></p>
 
 
 <h1>Past concerts:</h1>
