--- a/content/Concerts.html
+++ b/content/Concerts.html
@@ -2,7 +2,8 @@
 
 
 <h2>7/29/20 8:30pm ChiCityLives with Mike Rice.</h2> 
-<p>Listen to live stream at  <a href="https://que4.org/"> Que4.org</a></p>
+<p>Listen to live stream at <a target="_blank" href = "https://que4.org/">Que4.org</a></p>
+
 
 
 <h1>Past concerts:</h1>
