--- a/content/Recordings.html
+++ b/content/Recordings.html
@@ -6,6 +6,27 @@
  
  <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/682946549&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/hglewis" title="Harlan G. Lewis" target="_blank" style="color: #cccccc; text-decoration: none;">Harlan G. Lewis</a> · <a href="https://soundcloud.com/hglewis/bongocongoorgan" title="Bongo Congo Organ" target="_blank" style="color: #cccccc; text-decoration: none;">Bongo Congo Organ</a></div>
 
+ 
+ <h2> Mixtape of the Birds</h2>
+ 
+
+ <p>I was on my way to work in the early spring of 2020 when I came across a fallen birds nest. I was horrified to find it during fledgling season, but the mother and chicks were nowhere to be found---maybe it was just an old nest. On the way back home that evening I checked on the nest again. It sat there in the grass between two buildings just as it had done before. Not in a hurry this time, I noticed that the nest was made out of straw, mud, and cassette tape. Overjoyed by this I went home and got my camera, but it was hard to get a photo that made the nest look like anything but a pile of trash. I went home a little disappointed</p>. 
+
+<p>When I woke up the next morning I new exactly what I needed to do. I ran out and got the nest. I brought it home and wearing a mask and gloves and tried to tease the strands of cassette tape out of the tangle of straw and mud. It was very well constructed and in the end I had to destroy the whole nest to get the tape out, glued as it was into the mass.</p>
+
+<p>The tape was caked with mud and debris, so I washed each strand by putting them under running water and then squeegeeing off the softened earth detritus between two gloved fingers. After completing a strand I would hang them on a brass hook to dry.</p>
+
+<p>After all the strands had been washed to my liking, I repeated the process of saturating and squeegeeing with grain alcohol.</p>
+
+<p>I Found a cassette tape held together with screws "Forever Young" which I had no interest in ever listening to and opened it up for its parts. Leaving the clear leader tape, I removed the ferric tape from the spools so that I could easily splice the new tape into the cassette. I realized at this point that I could have done all of this without first opening the cassette.</p>
+
+<p>I laid the the tape strands of tape out on the floor and began to tape them together onto the left spool. I wound then wind it manually onto the tape spool which for the longer sections took quite some time. The tape was in such poor condition that it was sometimes hard to tell which side was up or down. You can hear this in the finished mixtape, where sometimes the recording sounds strange and muddy.</p>
+
+<p>After spooling on all the tape, I loaded it all back into the cassette and sealed it up. Trembling with joy I put it into my deck and hit play. The sound was not what I expected. I'll leave it at that.</p>
+ 
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/856638949%3Fsecret_token%3Ds-YhQIbDxpu34&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/hglewis" title="Harlan G. Lewis" target="_blank" style="color: #cccccc; text-decoration: none;">Harlan G. Lewis</a> · <a href="https://soundcloud.com/hglewis/mixtape-of-the-birds/s-YhQIbDxpu34" title="Mixtape of the Birds" target="_blank" style="color: #cccccc; text-decoration: none;">Mixtape of the Birds</a></div> 
+ 
+ 
 <h1>LOOK:</h1>
 
 <a target="_blank" href = "https://drive.google.com/drive/u/4/folders/1bRGkIQp2K34DWiDDGeh0GP44VPIW8nh2
