--- a/content/Recordings.html
+++ b/content/Recordings.html
@@ -10,7 +10,7 @@
  <h2> Mixtape of the Birds</h2>
  
 
- <p>I was on my way to work in the early spring of 2020 when I came across a fallen birds nest. I was horrified to find it during fledgling season, but the mother and chicks were nowhere to be found---maybe it was just an old nest. On the way back home that evening I checked on the nest again. It sat there in the grass between two buildings just as it had done before. Not in a hurry this time, I noticed that the nest was made out of straw, mud, and cassette tape. Overjoyed by this I went home and got my camera, but it was hard to get a photo that made the nest look like anything but a pile of trash. I went home a little disappointed</p>. 
+ <p>I was on my way to work in the early spring of 2020 when I came across a fallen birds nest. I was horrified to find it during fledgling season, but the mother and chicks were nowhere to be found---maybe it was just an old nest. On the way back home that evening I checked on the nest again. It sat there in the grass between two buildings just as it had done before. Not in a hurry this time, I noticed that the nest was made out of straw, mud, and cassette tape. Overjoyed by this I went home and got my camera, but it was hard to get a photo that made the nest look like anything but a pile of trash. I went home a little disappointed.</p>
 
 <p>When I woke up the next morning I new exactly what I needed to do. I ran out and got the nest. I brought it home and wearing a mask and gloves and tried to tease the strands of cassette tape out of the tangle of straw and mud. It was very well constructed and in the end I had to destroy the whole nest to get the tape out, glued as it was into the mass.</p>
 
