--- a/content/Recordings.html
+++ b/content/Recordings.html
@@ -34,18 +34,9 @@
 </a>
 
 <p>
-We are currently producing an album of postcard sized peices based on friend-submitted postcards from places which don't exist. If you're interested, mail postcards to 
+Thank you to everyone who sent us postcards.
 </p>
 
-<address>
-Harlan G. Lewis<br>
-5465 S. Everett Ave<br>
-Apt 309<br>
-Chicago, IL<br>
-60615<br>
-</address>
-
-I'll probably stop taking submissions around May 2020-ish. <br>
 
  <pre>   
       _________
