--- a/content/Concerts.html
+++ b/content/Concerts.html
@@ -1,7 +1,7 @@
 <h1>Upcoming concerts:</h1>
 
 
-<h2>7/29/20 8:30pm ChiCityLives with Mike Rice.</h2> 
+<h2>7/29/20 8:30pm CST ChiCityLives with Mike Rice.</h2> 
 <p>Listen to live stream at <a target="_blank" href = "https://que4.org/">Que4.org</a></p>
 
 
