--- a/content/Recordings.html
+++ b/content/Recordings.html
@@ -20,7 +20,7 @@
 
 <p>I found a cassette tape held together with screws. It was "Forever Young," which I had no interest in ever listening to and I opened it up for its parts. Leaving the clear leader tape, I removed the ferric tape from the spools so that I could easily splice the new tape into the cassette. I realized at this point that I could have done all of this without first opening the cassette.</p>
 
-<p>I laid the the tape strands of tape out on the floor and began to tape them together onto the left spool. I wound it manually onto the tape spool which for the longer sections took quite some time. The tape was in such poor condition that it was sometimes hard to tell which side was up or down. You can hear this in the finished mixtape, where sometimes the recording sounds underwtaer and backwards.</p>
+<p>I laid the the tape strands of tape out on the floor and began to tape them together onto the left spool. I wound it manually onto the tape spool which for the longer sections took quite some time. The tape was in such poor condition that it was sometimes hard to tell which side was up or down. You can hear this in the finished mixtape, where sometimes the recording sounds underwater and backwards.</p>
 
 <p>After spooling on all the tape, I loaded it all back into the cassette and sealed it up. Trembling with joy I put it into my deck and hit play. The sound was not what I expected.</p>
  
