--- a/content/Recordings.html
+++ b/content/Recordings.html
@@ -2,12 +2,16 @@
 <head></head>
 <body>
 <h1>LISTEN:</h1>
-<a target="_blank" href = "https://soundcloud.com/hglewis">https://soundcloud.com/hglewis</a>
+ 
+You can find my full portfolio at :<a target="_blank" href = "https://soundcloud.com/hglewis">https://soundcloud.com/hglewis</a>
+ 
+ <h2>Selected Recordings</h2>
+ 
  
  <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/682946549&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/hglewis" title="Harlan G. Lewis" target="_blank" style="color: #cccccc; text-decoration: none;">Harlan G. Lewis</a> · <a href="https://soundcloud.com/hglewis/bongocongoorgan" title="Bongo Congo Organ" target="_blank" style="color: #cccccc; text-decoration: none;">Bongo Congo Organ</a></div>
 
  
- <h2> Mixtape of the Birds</h2>
+ <h3> Mixtape of the Birds</h3>
  
 
  <p>I was on my way to work in the early spring of 2020 when I came across a fallen birds nest. I was horrified to find it during fledgling season, but the mother and chicks were nowhere to be found---maybe it was just an old nest. On the way back home that evening I checked on the nest again. It sat there in the grass between two buildings just as it had done before. Not in a hurry this time, I noticed that the nest was made out of straw, mud, and cassette tape. Overjoyed by this I went home and got my camera, but it was hard to get a photo that made the nest look like anything but a pile of trash. I went home a little disappointed.</p>
