--- a/public/content/About.html
+++ b/public/content/About.html
@@ -1,5 +1,5 @@
 <p>
-Meadowlarke is the trio Ben Oye, Ari Freedman, and Harlan G. Lewis. We combine early music (madrigals, period instruments, modal counterpoint) and new music (turntables, modular synthesis, dance music) to create pieces which grow legs, dance, and sweat, resulting in new forms of performer-audience relationship. We are best described as historically /inspired/ chamber music and engage in historical play and creative anachronism as a compositional method and tool for understanding the past and the future.
+Meadowlarke is the trio Ben Oye, Ari Freedman, and Eden Attar. We combine early music (madrigals, period instruments, modal counterpoint) and new music (turntables, modular synthesis, dance music) to create pieces which grow legs, dance, and sweat, resulting in new forms of performer-audience relationship. We are best described as historically /inspired/ chamber music and engage in historical play and creative anachronism as a compositional method and tool for understanding the past and the future.
 </p>
 
 
