Returned the cigarettes

--- a/content/Recordings.html
+++ b/content/Recordings.html
@@ -13,6 +13,17 @@ You can find my full portfolio at :<a target="_blank" href = "https://soundcloud
  <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/682946549&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/hglewis" title="Harlan G. Lewis" target="_blank" style="color: #cccccc; text-decoration: none;">Harlan G. Lewis</a> · <a href="https://soundcloud.com/hglewis/bongocongoorgan" title="Bongo Congo Organ" target="_blank" style="color: #cccccc; text-decoration: none;">Bongo Congo Organ</a></div>
 
  
+  <h3> No Other Cigarette</h3>
+
+ <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/857481958%3Fsecret_token%3Ds-Bhq7yp2LOH4&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/hglewis" title="Harlan G. Lewis" target="_blank" style="color: #cccccc; text-decoration: none;">Harlan G. Lewis</a> · <a href="https://soundcloud.com/hglewis/no-other-cigarette/s-Bhq7yp2LOH4" title="No Other Cigarette" target="_blank" style="color: #cccccc; text-decoration: none;">No Other Cigarette</a></div>
+
+
+ In collaboration with Jonathan Gardner of Curious Jorge (cello) and Ted Davis (voice), this is a cut-up poem made from cigarette ads. Commissioned by the Smart Mueseum and inspired by Xu Bing's tobacco project.
+
+
+
+
+ 
  
  
  <h3> Mixtape of the Birds</h3>
